re PR c/26818 (tree check: expected class ‘type’, have ‘exceptional’ (error_mark) in finish_struct, at c-decl.c:5350 (time.c))

PR c/26818
	* c-decl.c (finish_struct): Skip erroneous fields.

	* gcc.dg/struct-incompl-1.c: New test.

From-SVN: r114187